--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = ">=2.1.3"
 "psycopg2" = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
+django-filter = "*"
 
 [dev-packages]
 
