--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-filter = "*"
 django-crispy-forms = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
